--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "16.9.0",
     "react-native": "0.61.5",
-    "react-native-gesture-handler": "1.5.2"
+    "react-native-gesture-handler": "1.5.2",
+    "react-native-reanimated": "1.4.0"
   },
   "devDependencies": {
     "@babel/core": "7.7.5",
